--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </header>
 
     <nav>
-     <a href="Home">&#127968; Home/ الرأيسة</a>
-     <a href="contact us">&#128231; Contact us/ تواصل معنا</a>
+     <a href="https://suhaalmadi93-design.github.io/story/">&#127968; Home/ الرأيسة</a>
+     <a href="https://mail.google.com/">&#128231; Contact us/ تواصل معنا</a>
      <a href="Home">&#127916; Stories/ قصص</a>
      <br/>
      <a href="Home">&#127918; Games/ العاب</a>
@@ -274,4 +274,5 @@
     </div>
 
 </body>
+
 </html>
