Fix HTML structure and update content

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
      <div class="aside">
         <h2>Stories/ قصص</h2>
-        <a href="#">&#127916;Stories | قصص</a>
-        <a href="#"> &#128512;Play and learn |العب وتعلم</a></li> <br/>
+        <a href="https://suhaalmadi93-design.github.io/story/">&#127916;Stories | قصص</a>
+        <a href="https://suhaalmadi93-design.github.io/play-and-learn/"> &#128512;Play and learn |العب وتعلم</a></li> <br/>
         <a href="#">&#9836;Songs |اناشيد</a>
         
 
@@ -276,3 +276,4 @@
 </body>
 
 </html>
+
