Fix HTML structure and improve formatting

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <nav>
      <a href="https://suhaalmadi93-design.github.io/story/">&#127968; Home/ الرأيسة</a>
      <a href="https://mail.google.com/">&#128231; Contact us/ تواصل معنا</a>
-     <a href="Home">&#127916; Stories/ قصص</a>
+     <a href="https://suhaalmadi93-design.github.io/story/">&#127916; Stories/ قصص</a>
      <br/>
      <a href="Home">&#127918; Games/ العاب</a>
      <a href="Home">&#128214; Books/ كتب</a>
@@ -276,4 +276,5 @@
 </body>
 
 </html>
+
 
