Fix HTML structure and correct tags

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             </div>
 
          <div class="footer-contact">
-         <a href="https://mail.google.com/">&#128231; Contact us">&#128231; Contact us/ تواصل معنا</a>
+         <a href="https://mail.google.com/">&#128231; Contact us/ تواصل معنا</a>
          <a href="https://www.youtube.com/channel/UCTdW7tm4uDTT7Smvbvob2UQ">&#127916; YouTube Channel</a>
         </div>
 
@@ -276,6 +276,7 @@
 </body>
 
 </html>
+
 
 
 
